# sockd

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
docs/: LIFECYCLE.md  PROTOCOL.md
examples/: README.md  echo_client.rs  echo_daemon.rs
examples/python/: client.py
examples/swift/: main.swift
include/: module.modulemap  sockd.h
reference/: Makefile  README.md  bench-harness.c  protocol.h  router-client.c  router-daemon.c
src/: client.rs  config.rs  daemon.rs  error.rs  ffi.rs  frame.rs  lib.rs  pidfile.rs  process.rs  socket.rs
tests/: client_autostart.rs  daemon_roundtrip.rs  graceful_shutdown.rs  stale_recovery.rs  startup_ownership.rs
